# kritase64

./: .gitignore  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
include/: kritase64.hpp
src/: kritase64.cpp  kritase64.hpp  main.cpp
